# process-manager

./: README.md  __main__.py  config.yaml  manager.tcss  pyproject.toml  test.py  types.py  ui.py
dummy_processes/: __main__.py  d_one.py  d_three.py  d_two.py
log/: dds_handler.py  log_listener.py  logger.py  server.py
node/: __init__.py
src/process_manager/: __main__.py  config.yaml
src/process_manager/dummy_processes/: d_one.py  d_three.py  d_two.py
src/process_manager/log/: __init__.py  dds_handler.py  log_listener.py  server.py
src/process_manager/node/: __init__.py
src/process_manager/types/: __init__.py
src/process_manager/ui/: __init__.py  manager.tcss
src/process_manager/util/: __init__.py  auto_default_logging.py
test/: test.py
tests/: p_test.py  s_test.py  test.py
util/: __init__.py
